--- a/_i18n/en/_posts/2022-04-01-國際松-淨零合作-永續未來.md
+++ b/_i18n/en/_posts/2022-04-01-國際松-淨零合作-永續未來.md
@@ -1,21 +1,22 @@
 ---
   layout: "post"
-  title: "International Pine: Net-Zero Cooperation, Sustainable Future"
-  excerpt: "Global Citizens team up to make great ideas a gift to the planet"
+  title: "Hack for a Sustainable Future"
+  excerpt: "Global citizens team up to make great ideas a gift to the planet."
   image: "/assets/imgs/phi2022.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+Presidential Hackathon [International](https://presidential-hackathon.taiwan.gov.tw/en/international-track/) began in 2019 and is in its fourth year. So far, civic hackers from 36 countries have taken part in this special event. As the name suggests, the purpose of PHI is to invite civic hackers to come up with global solutions using open data. From the preliminary round to the final, the results of collaborative efforts are assessed by the review committee, with the best and brightest invited to the Presidential Office to take part in an award ceremony. Over the years, PHI has created a platform of free exchange for those keen to connect, promote great ideas and have the chance to implement in other parts of the world. If one wishes to collaborate and realize brilliant ideas with like-minded friends at home and abroad, PHI is the only game in town.
 
-Presidents Cup Hackathon [International Track](https://presidential-hackathon.taiwan.gov.tw/en/international-track/) has been held since 2019, and this year has entered its fourth year, with 36 participants so far. Friends from different countries participated in the grand event. As the name suggests, the purpose of International Pine is to invite global hackers to come up with solutions using open data through different themes. From the preliminary round to the final, all the results of the concerted efforts will be selected by the review committee to select the outstanding team and invited to the Presidential Palace to participate in the award ceremony. Over the years, International Pine has created a platform for friends who are interested in connecting with the world to communicate at ease, so that good ideas are not only seen in Taiwan, but also have the opportunity to be practiced in some parts of the world. If you want to collaborate and realize great ideas with friends on the other side of the world, International Pine is a worthwhile choice. 
+In 2020, coronavirus made it difficult for participants from around the globe to come to Taiwan, so PHI that year went online. That experience proved that digital technology is indeed a resilient tool in times of emergency. Through online meetings, real-time communication and collaboration tools, team members can still create and complete this marathon of the mind in physical isolation, and get to know other participants and open up opportunities for borderless communication.
 
-In 2020, due to the epidemic, participants from various countries could not come to Taiwan freely, so the International Festival of that year was changed to be held online. That experience proved that digital technology is a tool of "resilience" in the face of emergencies. Through online meetings, real-time communication and collaboration tools, we found that team members can still create and complete this collaborative "marathon" in different places even when they are in different places, and get to know other teams on the platform of International Pine. Open up opportunities for communication. 
+The online link has also given previous participating teams an opportunity to share experiences directly with friends interested in signing up. This year, the Show and Learn webinar was staged March 30, Taiwan time, and featured keynoter A/B Street--one of the outstanding teams of the 2021 edition. Last year, A/B Street proposed [Ungap the Map](http://bike.abstreet.org), an open-source interactive bicycle map, with the goal of making it easier for government agencies, transportation planners, cycle promotion groups and the public to plan cycling routes, striking a balance between safety, convenience and undulating road sections, while encouraging more people to take up cycling to reduce CO2 emissions. The team also designed a 15-minute Santa's Mission simulation game to help users familiarize with map functions and experience the needs of bicycle users in the city.
 
- Through the online link, past participating teams have the opportunity to share their experience directly with friends who are interested in signing up. For this year, we held a Show & Learn webinar on March 30th Taiwan time, and we invited A/B Street, one of the outstanding teams of the 2021 International Pine, as one of the keynote speakers. A/B Street last year proposed "[Ungap the Map](http://bike.abstreet.org)" an open-source, interactive bike map designed to make bike planning easier for government agencies, transportation planners, bike advocacy groups, and the public routes, finding a balance between safety, convenience and undulating sections, while encouraging more people to cycle to reduce CO2 emissions. The team also designed a simulation game of "15-minute Santa's Mission" to help users familiarize themselves with map functions and experience the real needs of bicycle users in the city. 
+Through open source and gamification practices, and in line with the 2021 theme Sustainability 2.0 - Climate Action, A/B Street demonstrated an innovative and interesting way of implementing related ideas. The 2022 international hackathon builds continues last year's agenda with the theme Climate Action: Practicing Net Zero.
 
-Through open source and gamification, closely following last year's theme "Sustainability 2.0 - Climate Action", A/B Street demonstrates one of the innovative and interesting ways to practice sustainability. Following the theme of last year, International Pine in 2022 will continue to focus on net zero emissions with the theme of "Climate Action: Realizing Net Zero". In the "Paris Agreement" in 2015, many countries around the world have declared their own contributions to reducing carbon emissions, and the 26th United Nations Climate Change Conference (COP26) in 2021 also called on countries around the world to gradually reduce fossil fuels, and invited global citizens. Brainstorming, taking the "city" as the unit of action, put forward specific plans on how to reduce greenhouse gas emissions, so that global climate warming can be limited between 1.5°C and 2°C. 
+The 2015 Paris Agreement saw many countries declare nationally determined contributions to reducing carbon emissions. The 26th U.N. Climate Change Conference (COP26) further urged countries to reduce the use of fossil fuels, and invited global citizens to brainstorm and employ cities as units of action to devise specific proposals on how to slash greenhouse gasses and limit global warming to between 1.5°C and 2°C.
 
-Like A/B Street's proposal, whether it is the transportation system, waste, sanitation, etc. in the city, it is closely related to greenhouse gas or carbon emissions. For this reason, International Pine is now calling for applications until May 23, Taiwan time. Experts in various fields, hackers, and global citizens who are interested in helping the world achieve the goal of net zero are welcome to team up to participate, so that excellent ideas can become gifts to the earth. 
+As the A/B Street project demonstrated, whether it is the city's transportation system, waste or sanitation, everything is related to carbon emissions. For this reason, Presidential Hackathon International is accepting submissions and will close May 23 Taiwan time. Experts in different fields, as well as hackers and global citizens interested in joining the growing Taiwan Can Help movement of achieving the net-zero goal are welcome to partner, participate and make your creativity a gift to our world.
