--- a/_i18n/zh-TW/_posts/2022-04-01-國際松-淨零合作-永續未來.md
+++ b/_i18n/zh-TW/_posts/2022-04-01-國際松-淨零合作-永續未來.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 國際松：淨零合作，永續未來
-excerpt: 全球公民組隊參賽，讓優秀的創意成為給地球的贈禮
+excerpt: 全球公民組隊參賽，讓優秀的創意成為給地球的贈禮。
 image: /assets/imgs/phi2022.jpg
 author: 唐鳳、彭筱婷
 category: blog
