--- a/_i18n/en/_posts/2022-04-05-協作會議-築起公部門與民眾互信.md
+++ b/_i18n/en/_posts/2022-04-05-協作會議-築起公部門與民眾互信.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Collaborative meeting to build mutual trust between the public sector and the public"
+  title: "Collaborative meetings foster mutual trust"
   excerpt: "Participation in policies, proposals and endorsements has successfully unleashed the imagination of many people for public policy innovation."
   image: "/assets/imgs/1AaqreB_W45OfwDU2Dvc_qBtnTRo0xYXE.jpg"
-  author: "唐鳳、彭美琪、彭筱婷"
+  author: "Audrey Tang, Mickey Peng, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+It hs now the fifth year of the "Open Government Participation Officers Collaborative Meetings". The goal of this channel is to promote civic cooperation and to create multi-party dialogue. Through the Join platform, citizens can participate in policies, proposals and petitions, by successfully releasing the imagination of many citizens for public policy innovation.
 
-"Open Government Liaison Collaboration Conference" has entered its fifth year. This channel aims to promote citizens' cooperation and create multi-party dialogue. Through the "Public Policy Network Participation Platform", citizens can participate in policies, proposals and The joint signature successfully released the imagination of many people for public policy innovation. 
+Over the past five years, the platform has received a dazzling array of proposals. For example, some people want to travel around with their furry children, but because pets cannot take public transportation, they proposed a "[pet friendly public transportation petition](https://cm.pdis.nat.gov.tw/57/)"; some people find the way of raising sacrificial figs used in traditional folk festivals inhuman, so they proposed a "[petition to stop weight competitions of sacrificial pigs in festivals](https://cm.pdis.nat.gov.tw/58/)" in the aspects of religious culture and freedom of belief.
 
-In the past five years, the platform has received a dazzling array of proposals. For example, some people want to play around with their furry children, but because pets cannot take public transportation, they file a "[pet-friendly ride-sharing case](https://cm.pdis.nat.gov.tw/57/)" ; some people feel unbearable when they see the way of raising the traditional folk god pigs, and propose the "[serial joint case for terminating the weight competition of the god pig](https://cm.pdis.nat.gov.tw/ 58/)". 
+These proposals not only demonstrate the needs and creativity of the public, but more importantly, highlight the spirit of collaborative meetings: anyone's propositions and ideas can be put into practice through civic collaboration, whether they arise from a leisure dinner or from behind a screen. After these proposals are signed by more than 5,000 people on the platform, they would be carefully discussed by the Open Government Participation Officers from the various ministries, and further selected through voting for collaboration with PDIS. This platform is not only a starting point for the communication between the people and public sectors, but also a new junction in the process of public policy discussion.
 
-These proposals not only show the needs and creativity of the public, but more importantly, highlight the spirit of collaborative meetings: whether after dinner or behind the screen, anyone's ideas and ideas can be put into practice through civic collaboration. After these proposals were signed by more than 5,000 people on the platform, various ministries and committees opened up government liaisons for careful discussion, and further voted to select them for collaboration with PDIS. This platform is not only a starting point for the communication between "public" and "civilian", but also a new node in the process of public policy discussion. 
+The "[Petition for the Protection of Rights and Interests of Married Women](https://cm.pdis.nat.gov.tw/88/)", whose collaborative meeting was recently held, is a fully inclusive example. Under current laws, if a married woman wants to have an abortion, she must obtain the consent of her spouse. Therefore, in order to promote body autonomy, some women made this proposal, and it was signed by more than 7,000 people.
 
- The "[Joint Statement on the Protection of the Rights and Interests of Married Women](https://cm.pdis.nat.gov.tw/88/)" recently held a collaborative meeting is a fully inclusive example. Under current law, if a married woman wants to have an abortion, she must obtain the consent of her spouse. Therefore, in order to promote body autonomy, some female friends proposed a proposal, and it was approved by more than 7,000 people. 
+After the Open Government Participation Officers Collaborative Meeting raised the petition, the Ministry of Health and Welfare immediately stated that the previously announced draft of the Fertility Health Care Law has moved towards amending the provision of abortion for married women and removing the provision on spousal consent, so the collaborative meeting and the law revision forum are compatible. Those who proposed and seconded this petition were also invited to join. In this collaboration and briefing session, the content of discussions included human rights, religion, family and gender equality, which will move public policies in a direction that is more responsive to the society's needs and more implementable.
 
-After the open government liaison meeting raised the case, the Ministry of Health and Welfare immediately stated that the previously announced draft of the "Reproductive Health Care Law" has moved towards amending the provision of abortion for married women and deleting the provisions on spousal consent. The symposium is compatible, and the proposers and seconders are also invited to join. This collaboration and briefing session, including discussions on human rights, religion, family and gender equality, will move public policy in a direction that is more responsive and feasible. 
+The above process fully conveys the special features of collaborative meetings that are different from traditional public hearings: stakeholders from all parties are invited to join, so that issues that involve multiple ministries and are difficult to be resolved by a single ministry right away can be fully discussed in the meeting to converge the views of all parties. It not only allows participants with different positions from all sides to "express their aspirations", but also allows civil servants of government agencies to "be clear on their aspirations". They also get to establish channels for dialogue and mutual trust with colleagues in other agencies, laying a good foundation for future inter-ministerial policy coordination.
 
-The above process fully conveys the special features of collaborative meetings that are different from traditional public hearings: stakeholders from all parties are invited to join, so that problems involving cross-departmental meetings that are temporarily difficult to be solved by a single department can be resolved during the meeting. It has been fully discussed, and the opinions of all parties have been converged. It not only allows participants with different positions from all sides to "express their aspirations", but also allows civil servants of government agencies to "clear their aspirations", and establish channels for dialogue and mutual trust with colleagues in other agencies, laying a good foundation for future inter-ministerial policy coordination. . 
-
-Since March 2017, collaboration sessions have advanced hundreds of cases. I have mentioned that the collaborative meeting has three main purposes: to create opportunities for "public" and "civilian" dialogue, to find feasible solutions, and to introduce an open government approach. In the past five years, the cooperation of each case is the best verification of these three purposes. It also shows us that the higher the foundation of trust between the public sector and the public, the more opportunities we have to improve public policies. This will be the biggest motivator for collaborative meetings to continue. 
+Since March 2017, collaborative meetings have advanced hundreds of cases. I have mentioned the three main purposes of collaborative meeting: to create opportunities for people-public partnerships, to find feasible solutions, and to introduce an open government approach. In the past five years, the cooperation on each proposal is the best verification of these three purposes. It also shows us that the higher the foundation of trust between the government agencies and the general public, the more opportunities we have to improve public policies. This will be the biggest motivator to continue collaborative meetings.
