--- a/_i18n/en/_posts/2022-04-07-公私夥伴，帶動古蹟重生.md
+++ b/_i18n/en/_posts/2022-04-07-公私夥伴，帶動古蹟重生.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Public-private partnership, driving the rebirth of historic sites"
-  excerpt: "It not only promotes the integration of historical sites into community life, but also serves as a wonderful demonstration of civic cooperation."
+  title: "Public-private partnership brings rebirth of historic sites"
+  excerpt: "This not only promoted the integration of historic sites into community life, but also is a wonderful demonstration of civic cooperation."
   image: "/assets/imgs/1zQux1MR12jqjLCX_thvJKDmojwkmJ1NR.jpg"
-  author: "唐鳳、詹壹雯"
+  author: "Audrey Tang, Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+In recent years, with the joint efforts of both private and public sectors, many historical sites have been preserved intact. How to continue to enrich and revitalize the content of historical sites, so that more people can come to appreciate them in person, is the goal that all the partners are dedicated to.
 
-In recent years, with the joint efforts of the people and the government, many physical monuments have been completely preserved. How to continue to enrich and revitalize the content of historical sites, so that more people can enjoy the style, is the goal of partners from all walks of life. 
+Take the "Chiayi Old Prison" established in 1919 as an example: it was listed as a national monument in 2005, and was opened to the public after restoration. After years of study on the maintenance plan, the Chiayi Old Prison was transformed into the first prison museum, and the second phase of the old prison revitalization and reuse project was launched this year. Minister of Justice Tsai Ching-hsiang further proposed that more ideas and inputs should be collected through the means of "Open Government - Collaborative Meeting”.
 
-Take the "Chiayi Old Prison" established in 1919 as an example: it was listed as a national monument in 2005, and it was opened to the public after restoration. After years of research on the maintenance plan, the old prison in Chiayi has been transformed into the first prison museum, and the second phase of the old prison revitalization and reuse project will be launched this year; Minister of Justice Cai Qingxiang further proposed that through "Open Government - Collaboration" meeting” to brainstorm ideas. 
+However, the operation of a museum is very different from the original work responsibilities of the Agency of Corrections. In addition, the organizational manpower is limited, and the front-line staff felt that they were "overwhelmed despite their best intention". Therefore, in the early stage of preparing for the collaborative meeting, we focused on cross-organizational exchange of experiences and cross-level cognitive alignment, to assist colleagues in the Corrections Department to clarify the direction and take stock of resources.
 
- However, the operation of the museum is very different from the original business responsibilities of the Correctional Services Department. In addition, the organizational manpower is stretched, and the front-line colleagues feel that they are "more than enough but not enough". Therefore, in the early stage of preparing for the collaboration meeting, we focused on cross-agency exchange of experience and cross-level cognitive alignment to help colleagues in the Corrections Department clarify the direction and take stock of resources. 
+First of all, we examined the experiences of other ministries in establishing museums. For example, when the Ministry of Culture established the National Railway Museum, how did they introduce professional inputs from all parties? How did the National Maritime Science and Technology Museum, which is operated through outsourcing by the Ministry of Education, draw up contracts and operate in a public-private partnership model? For the National Museum of Indigenous Peoples, which will be situated in Kaohsiung Chengcing Lake, what are the budgeted positions and the exchange plans for the collection of cultural relics?
 
- First, we study the experiences of other ministries in establishing museums. For example, when the Ministry of Culture established the National Railway Museum, how did they introduce professional opinions from all parties? How does the National Maritime Science and Technology Museum, which is operated by the Ministry of Education, draw up contracts and operate a public-private partnership model? The National Museum of Indigenous Peoples decided to settle in Kaohsiung Ching Lake, what are the budgeted posts and the exchange plan for the collection of cultural relics? 
+In addition to sharing all the relevant experiences from the various departments, the "National Monument Chiayi Old Prison Revitalization and Reuse Team" of the Ministry of Justice also has the Director and the Deputy Director of the Agency of Corrections as the conveners, and the Department of Planning and the Secretary's Office as the deputy conveners. The collaboration across all levels bridges the gaps between imagination and implementation.
 
-In addition to sharing their experience in organizing, the Ministry of Justice's "National Monument Chiayi Old Prison Revitalization and Reuse Team" is also convened by the Director of Corrections and the Deputy Director, and the Department of Comprehensive Planning and the Secretary's Office as the deputy convener , to work together across levels to narrow the distance between imagination and implementation. 
+Next, how to dismantle the cold and cloistered image that people have about the prison, and turn it towards an open, accessible and revitalized direction that integrates the needs of citizens’ lives? This calls for a return to the "user-centered" design thinking.
 
- Next, how to dismantle the original cold and closed image of the prison, and turn it towards an open, close-to-the-people and revitalized direction that integrates the needs of citizens' life? This returns to the "user-centered" design thinking. 
+The collaboration meeting was specifically held on a Saturday. Local chiefs of village, residents, educations groups who have long served Chiayi, local and national tourism and travel agency operators, young people, volunteers, cultural and historical experts, architectural landscape experts and colleagues from Chiayi City Government all gathered at the site of the Chiayi Old Prison. They discussed their visions as well as contributed resources.
 
-Collaboration meeting is the day, specially selected to be held on Saturday. From long-term residents in the fields, to long-term business and education groups in Chiayi, local and national tourism and travel agency operators, youth, volunteers, cultural and historical experts, and even architectural landscape experts and colleagues from Chiayi City Government, gathered in Chiayi Old Town. The prison campus, while talking about desire, also contributes resources. 
+Through the guided tour in the morning, we got to understand the historical context and the utilization limitations of cultural resources. In the afternoon discussion, we started from their respective concerns and visions, and jointly created specific proposals for revitalization and reuse. Netizens who participated online also actively provided valuable opinions.
 
-Through the morning tour, you can learn about the historical context and the limitations of the use of cultural resources; in the afternoon discussion, you will start from your own concerns and visions, and jointly create specific suggestions for revitalization and reuse. Netizens who participated online also actively provided valuable opinions. 
-
-This collaborative meeting not only promotes the integration of historic sites into community life, but is also a wonderful demonstration of civic cooperation. Looking forward to the new look of the old Chiayi Prison, a national historic site, with the continuous cooperation of colleagues in the public sector and friends from all over the country, it can take root locally and advance internationally. For the website of the results, please search: "[Prisons open, monuments reborn](https://cm.pdis.nat.gov.tw/102/)". 
+This collaborative meeting not only promoted the integration of historic sites into community life, but also is a wonderful demonstration of civic cooperation. I am looking forward to the new look of the National Monument Chiayi Old Prison and that with the continuous cooperation of colleagues in the public sector and friends all around, it can take root locally and advance internationally. For the results website, please visit here: "[a prison is open, and a monument is reborn](https://cm.pdis.nat.gov.tw/102/)".
