--- a/_i18n/en/_posts/2019/2019-06-28-國手與國慶.md
+++ b/_i18n/en/_posts/2019/2019-06-28-國手與國慶.md
@@ -6,7 +6,7 @@
   author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "Youth Engagement"
+    - "Youth Participation"
 ---
 
 💯 A piece of good news for everyone — National champions of the WorldSkills Competitions (WSC) will be part of this year's National Day Parade to receive everyone's applause! National skill champions and vocational education of all trades will be the highlight of the National Day.
