--- a/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -8,7 +8,7 @@
   tags: 
     - "Open Government"
     - "Social Innovation"
-    - "Youth Engagement"
+    - "Youth Participation"
   cc: site.copyright
 ---
 
