--- a/_i18n/en/_posts/project/2021-11-17-yda.md
+++ b/_i18n/en/_posts/project/2021-11-17-yda.md
@@ -6,7 +6,7 @@
   author: "Wendy Hsueh, Fang-Jui Chang, Naxus Chang"
   category: "project"
   tags: 
-    - "Youth Engagement"
+    - "Youth Participation"
     - "Social Innovation"
     - "Open Government"
     - "Public-Private Partnership"
