--- a/_i18n/en/_posts/2022-05-31-社會創新 興新亞洲.md
+++ b/_i18n/en/_posts/2022-05-31-社會創新 興新亞洲.md
@@ -21,4 +21,4 @@ Another shining example of a social coordination prize is Phare, a Cambodian Cir
 
 This year’s award-winning Taiwanese applications are equally impressive. Among the winning lineup are 800 Gold, which focuses on the recovery of the mainstream region; Xusi Joint Stock Company, which targets women’s physiology; Cathay Bank, which assists social innovation organizations in obtaining loans; Tasteme, a coalition platform reducing food waste; and SERT, Taiwan’s first public welfare trust to invest in social innovation organizations. The Asia-Pacific Social Innovation Cooperation Award has long recognized the achievements of industry specialists from various international community innovation intermediary organizations. These homegrown undertakings today boast world-class status as a result of root-and-branch support for applications.
 
-The APSIS “Cheer up Asia” will be held in northeastern Taiwan’s Yilan County next year to promote local culture and related community-based experiences. Its unashamed objective is taking Taiwanese culture to Asia and the Indo-Pacific. website and social innovation platform include information on APSIS and APSIPA. Individuals and groups interested in attending and applying for next year’s conference and award are strongly urged to do so. Let us stand together in cheering up Asia!
+The APSIS “Cheer up Asia” will be held in northeastern Taiwan’s Yilan County next year to promote local culture and related community-based experiences. Its unashamed objective is taking Taiwanese culture to Asia and the Indo-Pacific. Individuals and groups interested in attending and applying for next year’s conference and award are strongly urged to do so. Let us stand together in cheering up Asia!
