--- a/_i18n/en/_posts/2022-06-02-「未來網際網路宣言」的承諾.md
+++ b/_i18n/en/_posts/2022-06-02-「未來網際網路宣言」的承諾.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "The promise of the Future Internet Manifesto"
-  excerpt: "Harness the democratic power of the \"people network\" to strengthen the digital resilience of the \"Internet\"."
+  title: "The Promise of the \"Declaration for the Future of the Internet\""
+  excerpt: "The democratic power of our \"interpersonal network\" strengthens the digital resilience of the Internet."
   image: "/assets/imgs/278898019_1310666159424651_7475624880982055387_n.jpeg"
-  author: "唐鳳"
+  author: "Audrey Tang, Joke"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+As an integral part of modern society, the Internet is the bloodline that connects the global society. Whether on a mountain at an altitude of 3,800 meters, or in a remote tribal village located deep in the mountains, through the Internet, the life experience and humanistic assets between people can transcend race, gender, and status, and be linked by the means of hyperlinks. Relying upon each other's communication protocols, everybody can access the same resources and services.
 
-As an integral part of modern society, the Internet is the bloodline that connects the global society. Whether on a mountain at an altitude of 3,800 meters, or in a remote village located deep in the mountains, through the Internet, the life experience and humanistic assets between people will transcend race, gender, Status, linked by hyperlinks, relying on each other's communication protocols, everyone can access the same resources and services. 
+We seem to be living in the age with the most freedom to communicate, but at the same time we are facing the most severe test.
 
-We seem to be living in the era of the most free communication, but at the same time we are facing the most severe test. 
+User communities that believe in different values form digital settlements based on their identities, but are often involved in behavior patterns that intensify confrontation and distinction between us and them. The power asymmetry brought about by the centralization of information has also made many people around the world worry that the era of digital centralization is coming. At the same time, a few totalitarian regimes have also seized this opportunity, trying to redefine democracy and freedom as "democracy under regulation" and "freedom within walls", and twisting the rapid transmission of digital technology into a stick for controlling others and pointing to each corner.
 
- User communities that believe in different values form digital settlements based on their identities, but they are often involved in behavior patterns that intensify confrontation and distinguish between enemy and self. The power asymmetry brought about by the centralization of information has also made many friends around the world worry that the era of digital centralization is coming. At the same time, a few totalitarian regimes also seized this opportunity, trying to redefine democracy and freedom as "democracy under regulation" and "freedom within walls", twisting the rapid transmission of digital technology into a stick for controlling others. , pointing to each corner. 
+At the end of last year, as a digital political commissar of Taiwan, I participated in the Democracy Summit convened by the U.S. White House, and shared the practical experience of how our country was able to effectively control the risk of pandemic prevention without sacrificing personal freedom under these waves of pandemic. Furthermore, I also took the fight against false information as an example to show how the civil community can spontaneously rally the wisdom of the masses, and use the democratic power of the "interpersonal network" to strengthen the digital resilience of the "Internet".
 
-At the end of last year, as a Taiwanese political commissar, I participated in the Democracy Summit convened by the White House in the United States to share how our country can effectively control the risk of epidemic prevention without sacrificing personal freedom under these waves of epidemics. experience. In addition, it also takes the fight against false information as an example to demonstrate how the civil community spontaneously gathers the wisdom of the masses, uses the democratic power of the "personal network", and strengthens the digital resilience of the "internet". 
+The core value is that the government must first trust the people, and then it is possible for the people to achieve mutual trust and cooperation with the government.
 
-The core value is: the government must first trust the people, and then the people can achieve mutual trust and cooperation with the government. 
+How to implement it? Earlier this year at the end of April, I signed "A Declaration for the Future of the Internet" with representatives of 60 countries around the world. Countries with similar ideas jointly promised to promote the protection of human rights, freedom, and mutual trust, and at the same time, to promote the openness and interoperability of the digital economy in a pluralistic and inclusive manner, as well as to conduct participatory governance of the Internet through a multi-stakeholder structure.
 
-How to implement it? Earlier this year at the end of April, I signed the "Future Internet Manifesto" with representatives of 60 countries around the world. Countries with similar ideas jointly undertake to promote the protection of human rights, freedom and mutual trust, and at the same time, to promote the openness and interoperability of the digital economy in a pluralistic and inclusive manner; and to conduct participatory governance of the Internet through a multi-stakeholder structure. 
+This declaration not only focuses on the multi-party connections of the "network", but more importantly, the distributed structure of the "internetwork", which is both decentralized and interdependent - if a corner of a node stalls and falls, the entire Internet will also sink downward.
 
- This declaration not only focuses on the multi-party connection of the "Internet", but also on the decentralized structure of the "Internet", which is both decentralized and interdependent - if a corner of a node stalls and falls , the entire Internet will sink down. 
+The European Union has recently put forward the "Digital Services Act" and "Digital Markets Act" for regulating the responsibilities and obligations of service providers and market gatekeepers in response to the needs of society. In Taiwan, we believe that broadband is a basic human right. In addition to adhering to freedom of speech and promoting digital democracy, the National Communications Commission also drafted the "Digital Communication Services Act" with reference to relevant international norms, to connect the laws applicable in the real society to the digital world.
 
-The European Union has recently put forward the "Digital Service Law" and "Digital Market Law", which regulates the responsibilities and obligations of service providers and market gatekeepers to respond to the needs of society; in Taiwan, we believe in broadband It is a basic human right. In addition to adhering to freedom of speech and promoting digital democracy, the Communication Association also drafted the "Digital Communication and Communication Service Law" with reference to relevant international norms to connect the laws applicable in the real society to the digital world. 
-
- Faced with the challenges of the future digital age, no one needs to be silenced. We will continue to strengthen our partnership with the world and collaborate to promote the common governance of the Internet. We welcome continuous feedback from all walks of life. 
+Faced with the challenges of the future digital age, no one needs to be silenced. We will continue to strengthen our partnership with the world and collaborate to promote the common governance of the Internet. We welcome continuous feedback from all walks of life.
