--- a/_i18n/zh-TW/_posts/2022-06-02-「未來網際網路宣言」的承諾.md
+++ b/_i18n/zh-TW/_posts/2022-06-02-「未來網際網路宣言」的承諾.md
@@ -3,7 +3,7 @@ layout: post
 title: 「未來網際網路宣言」的承諾
 excerpt: 運用「人際網絡」的民主力量，強化「網際網路」的數位韌性。
 image: /assets/imgs/278898019_1310666159424651_7475624880982055387_n.jpeg
-author: 唐鳳
+author: 唐鳳、簡就可
 category: blog
 tags:
   - 開放政府
