* 尋找對立中的交集

--- a/_posts/2022-06-07-尋找對立中的交集.md
+++ b/_posts/2022-06-07-尋找對立中的交集.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 「未來網際網路宣言」的承諾
-excerpt: 運用「人際網絡」的民主力量，強化「網際網路」的數位韌性。
-image: /assets/imgs/278898019_1310666159424651_7475624880982055387_n.jpeg
-author: 唐鳳、簡就可
+title: 尋找對立中的交集
+excerpt: 看見每一個需求都是真實的，而且可以聽聽別人的真實處境。
+image: /assets/imgs/hospice-gc4866b1b9_1280.jpg
+author: 唐鳳、張皓婷
 category: blog
 tags:
   - 開放政府
