--- a/_i18n/en/_posts/2022-06-07-尋找對立中的交集.md
+++ b/_i18n/en/_posts/2022-06-07-尋找對立中的交集.md
@@ -1,12 +1,12 @@
 ---
   layout: "post"
-  title: "The promise of the Future Internet Manifesto"
-  excerpt: "Harness the democratic power of the \"people network\" to strengthen the digital resilience of the \"Internet\"."
-  image: "/assets/imgs/278898019_1310666159424651_7475624880982055387_n.jpeg"
-  author: "唐鳳、簡就可"
+  title: "Finding the intersection of opposites"
+  excerpt: "Every need is real, and you can listen to the real situation of others.
+  image: "/assets/imgs/hospice-gc4866b1b9_1280.jpg"
+  author: "Audrey Tang, Hao-Ting Chang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
