fix missing quote mark

--- a/_i18n/en/_posts/2022-06-07-尋找對立中的交集.md
+++ b/_i18n/en/_posts/2022-06-07-尋找對立中的交集.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Finding the intersection of opposites"
-  excerpt: "Every need is real, and you can listen to the real situation of others.
+  excerpt: "Every need is real, and you can listen to the real situation of others."
   image: "/assets/imgs/hospice-gc4866b1b9_1280.jpg"
   author: "Audrey Tang, Hao-Ting Chang"
   category: "blog"
