--- a/_i18n/en/_posts/2022-06-29 Web3 的靈魂：SBT 憑證.md
+++ b/_i18n/en/_posts/2022-06-29 Web3 的靈魂：SBT 憑證.md
@@ -1,9 +1,9 @@
 ---
   layout: "post"
   title: "All aboard the SBTs express"
-  excerpt: "The "soulbound tokens" is poised to change the web3 world."
+  excerpt: "The “soulbound tokens” is poised to change the web3 world."
   image: "https://cdn-cw-english.cwg.tw/article/202206/article-62ba90a0b8fa0.jpg"
-  author: "Audrey Tang" "Sheau-Tyng Peng"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
     - "Social Innovation"
