--- a/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
+++ b/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Web3 的靈魂：SBT 憑證
+title: "Web3 的靈魂：SBT 憑證"
 excerpt: "這個剛剛誕生的 NFT 應用概念，即將改變 web3 生態。"
 image: https://cdn-cw-english.cwg.tw/article/202206/article-62ba90a0b8fa0.jpg
 author: 唐鳳、彭筱婷
@@ -10,7 +10,7 @@ tags:
 
 ---
 
-什麼是 SBT（Soulbound tokens）？這個剛剛誕生的 NFT 應用概念，即將改變 web3 生態。在六月中，我邀請了 Vitalik Buterin 擔任我的 Podcast 節目 #InnoMinds 來賓。這位知名區塊鏈平台「以太坊」的創辦人，在節目中除了提出他對於數位社群以及言論自由的看法，也詳細說明了今年五月時，他和 RadicalxChange 創辦人 Glen Weyl、Flashbots 策略師 Puja Ohlhaver 合著的論文《去中心化社會：尋找 Web3 的靈魂（DeSoc）》中的核心：SBT（靈魂綁定憑證）。
+什麼是 SBT（Soulbound tokens）？這個剛剛誕生的 NFT 應用概念，即將改變 web3 生態。在六月中，我邀請了 Vitalik Buterin 擔任我的 [Podcast 節目 #InnoMinds](https://www.youtube.com/watch?v=jp1L-DGYnJA) 來賓。這位知名區塊鏈平台「以太坊」的創辦人，在節目中除了提出他對於數位社群以及言論自由的看法，也[詳細說明了](https://youtu.be/jp1L-DGYnJA?t=2389)今年五月時，他和 RadicalxChange 創辦人 Glen Weyl、Flashbots 策略師 Puja Ohlhaver 合著的論文《[去中心化社會：尋找 Web3 的靈魂（DeSoc）](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4105763)》中的核心：SBT（靈魂綁定憑證）。
 
 早在今年年初，Vitalik 就已提出靈魂綁定（Soulbound）概念。這個概念來自於線上遊戲《魔獸世界》，有些物品一旦被玩家取得，就成為「靈魂綁定物品」，不能再轉讓或出售給其他玩家。在遊戲中，靈魂綁定的好處，在於避免投機和增加趣味，玩家不能躲起來刷裝備，而是必須充分運用靈魂綁定物品，面對真正的挑戰和任務。
 
@@ -20,7 +20,7 @@ tags:
 
 這篇論文提出這些問題的解方，也就是綁定於個人或組織的「靈魂（Soul）」帳號，而 SBT 則是其中蒐集的徽章，代表社群認可的貢獻紀綠，一旦同意鑄造後，就無法交給別人。
 
-SBT 的獨到之處，是「社群」也可以作為持證的單位，例如「社創中心」的靈魂帳號，可以向不同的進駐團隊發放 SBT，大學也可以向附屬學校發放 SBT。透過各種社會關係的賦予和收受，SBT 成為彼此的認證，而雙方也因為公開交代「說到做到」的過程，提升各自的真實度與互信。
+SBT 的獨到之處，是「社群」也可以作為持證的單位，例如「[社創中心](https://clab.org.tw/en/architecture/social-innovation-lab/)」的靈魂帳號，可以向不同的進駐團隊發放 SBT，大學也可以向附屬學校發放 SBT。透過各種社會關係的賦予和收受，SBT 成為彼此的認證，而雙方也因為公開交代「說到做到」的過程，提升各自的真實度與互信。
 
 許多線上遊戲，不僅提供單方面使用的寶物，也提供玩家管理公會金庫的投票權。同樣的，「靈魂」累積的 SBT，也反映了共創和參與的權利。這些社會優勢，可能會造成不平等的情況，但 SBT 讓所有參與者都能看到並因此做出調整，進而鼓勵更多元的協作。
 
