--- a/_i18n/en/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
+++ b/_i18n/en/_posts/2022-06-29-Web3-的靈魂-SBT-憑證.md
@@ -9,7 +9,7 @@
     - "Social Innovation"
 ---
 
-What exactly are “soulbound tokens” (SBTs)? This new concept, stemming from non-fungible tokens (NFTs), is poised to change the web3 world. In my recent #InnoMinds video podcast, Ethereum co-founder Vitalik Buterin shared his thoughts on digital communities and free speech. He also elaborated on SBTs, the core of the paper Decentralized Society: Finding Web3’s Soul (DeSoc), which he co-authored with RadicalxChange founder Glen Weyl and Flashbots’ Strategist Puja Ohlhaver this past May.
+What exactly are “soulbound tokens” (SBTs)? This new concept, stemming from non-fungible tokens (NFTs), is poised to change the web3 world. In [my recent #InnoMinds video podcast](https://www.youtube.com/watch?v=jp1L-DGYnJA), Ethereum co-founder Vitalik Buterin shared his thoughts on digital communities and free speech. He also [elaborated on SBTs](https://youtu.be/jp1L-DGYnJA?t=2389), the core of the paper [Decentralized Society: Finding Web3’s Soul (DeSoc)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4105763), which he co-authored with RadicalxChange founder Glen Weyl and Flashbots’ Strategist Puja Ohlhaver this past May.
 
 The term “soulbound,” proposed by Vitalik earlier this year, was inspired by the online game World of Warcraft. In the game, certain items with special powers (such as a sword) cannot be transferred or sold to others once they have been collected by a player. This is a “soulbound item,” and the benefit of “soul binding” is that it avoids speculation on the item while increasing participation. Players cannot obtain such items while hiding; they must make full use of “soulbound items” to face genuine challenges and tasks.
 
@@ -18,7 +18,8 @@ Games offer rich metaphors for the journey of life. While earning swords offer a
 In the recent past, speculative, wholly transferable virtual assets unmoored to community coordination (such as various “coins” and NFTs) have been the focus of attention. However, transactions based solely on anonymity and unilateral transferability is essentially a cynical conduit for human greed. Rug-pulling, vampire attacks, sybil-attacked “airdrops”, and phishing scams are some of the most notorious examples. 
 
 Solutions to these problems are floated in Vitalik and his co-authors’ paper. One idea is that a “soul” is a pseudonymous account tied to a person or entity and that SBTs are the badges collected in the account. These badges represent non-transferable memberships to communities. In other words, once you mint an SBT, you cannot give it to others. 
-Communities can also issue SBTs to each other. For example, the Social Innovation Lab in Taipei City can be a “soul” distributing SBTs to various resident organizations. Likewise, a university can distribute SBTs to its affiliated schools. Through giving and receiving in various social relationships, SBTs act as mutual authentications. As a result of their ongoing public interactions, parties increase authenticity and mutual trust.
+
+Communities can also issue SBTs to each other. For example, the [Social Innovation Lab](https://clab.org.tw/en/architecture/social-innovation-lab/) in Taipei City can be a “soul” distributing SBTs to various resident organizations. Likewise, a university can distribute SBTs to its affiliated schools. Through giving and receiving in various social relationships, SBTs act as mutual authentications. As a result of their ongoing public interactions, parties increase authenticity and mutual trust.
 
 Many online games offer not just swords which you can unilaterally wield, but also voting rights on how to steward your guild’s gold. Similarly, “souls” accumulate SBTs that reflect their solidarities and rights to participate. While such social advantages may become the source of inequities, SBTs allow participants to see and thus adjust for such advantages, encouraging social diversity and cooperation across these differences.
 
